# kdeconnect-kde

plugins/lockdevice/: CMakeLists.txt  lockdeviceplugin.cpp  lockdeviceplugin.h
